Project site screen size compatibility
Project site screen size compatibility

--- a/misc-docs-etc/Developing-maintaining/project-site/index.html
+++ b/misc-docs-etc/Developing-maintaining/project-site/index.html
@@ -12,29 +12,29 @@
 
 </head>
 <body>
+<div align='center' style='width: 100%;'>
 
 	<div align='center'>
 
 	<h1>DFD Cryptocoin Values</h1>
 	<h2>Open source / free private cryptocurrency portfolio tracker, with email / text / alexa alerts</h2>
 
-	<p style='margin: 45px;'>
+	<p align='center' style='margin: 45px;'>
 	<img src='favicon.png' border='0' />
 	</p>
-	<p style='margin: 45px;'>
+	<p align='center' style='margin: 45px;'>
 	<a style='font-weight: bold; font-size: 35px;' href='https://sourceforge.net/projects/dfd-cryptocoin-values/'>Visit Sourceforge Project Page</a>
 	</p>
-	<p style='margin: 45px;'>
+	<p align='center' style='margin: 45px;'>
 	<a style='font-weight: bold; font-size: 35px;' href='https://github.com/taoteh1221/DFD_Cryptocoin_Values/releases'>Visit Github Releases Page</a>
 	</p>
-	<p style='margin: 45px;'>
+	<p align='center' style='margin: 45px;'>
 	<a style='font-weight: bold; font-size: 35px;' href='https://dragonfrugal.com/coin-prices/'>Test Drive Working Public Demo</a>
 	</p>
 
 	</div>
 
-
-  <div align='center' style='min-width:1300px;'>
+  <div align='center' style='max-width:1300px; min-width: 430px;'>
 
     <h1>Screenshots</h1>
     <div style='position: relative;'>
@@ -53,7 +53,7 @@
       
     </div>
   </div>
-
+</div>
 
   <script src="js/lightbox-plus-jquery.min.js"></script>
 
