--- a/misc-docs-etc/Developing-maintaining/project-site/index.html
+++ b/misc-docs-etc/Developing-maintaining/project-site/index.html
@@ -10,33 +10,40 @@
 <link rel="stylesheet" href="css/style.css" type="text/css" />
   <link rel="stylesheet" href="css/lightbox.min.css">
 
+<link rel="shortcut icon" href="images/favicon.png">
+<link rel="icon" href="images/favicon.png">
+
 </head>
 <body>
 <div align='center' style='width: 100%;'>
 
 	<div align='center'>
 
-	<h1>DFD Cryptocoin Values</h1>
-	<h2>Open source / free private cryptocurrency portfolio tracker, with email / text / alexa alerts</h2>
+	<h2>DFD Cryptocoin Values</h2>
+	<h3>Private cryptocurrency portfolio tracker, with email / text / Alexa alerts, charts, mining calculators, and other crypto tools.</h3>
+	<h4>Privately track your Bitcoin, Ethereum, Monero, Litecoin, Grin, Cosmos, and an unlimited number of other altcoins. Customize the coin list / alerts to your favorite assets / exchange pairings. No limits, add as many coins / markets as you want.</h4>
 
-	<p align='center' style='margin: 45px;'>
-	<img src='favicon.png' border='0' />
+	<p align='center' class='main_links'>
+	<a href='https://sourceforge.net/projects/dfd-cryptocoin-values/'>Visit Sourceforge Project Page</a>
 	</p>
-	<p align='center' style='margin: 45px;'>
-	<a style='font-weight: bold; font-size: 35px;' href='https://sourceforge.net/projects/dfd-cryptocoin-values/'>Visit Sourceforge Project Page</a>
+	
+	<p align='center' class='main_links'>
+	<a href='https://github.com/taoteh1221/DFD_Cryptocoin_Values/releases'>Visit Github Releases Page</a>
 	</p>
-	<p align='center' style='margin: 45px;'>
-	<a style='font-weight: bold; font-size: 35px;' href='https://github.com/taoteh1221/DFD_Cryptocoin_Values/releases'>Visit Github Releases Page</a>
-	</p>
-	<p align='center' style='margin: 45px;'>
-	<a style='font-weight: bold; font-size: 35px;' href='https://dragonfrugal.com/coin-prices/'>Test Drive Working Public Demo</a>
+	
+	<p align='center' class='main_links'>
+	<a href='https://dragonfrugal.com/coin-prices/'>Test Drive Working Public Demo</a>
 	</p>
 
+	<p align='center'>
+	<img src='images/favicon.png' border='0' />
+	</p>
+	
 	</div>
 
   <div align='center' style='max-width:1300px; min-width: 430px;'>
 
-    <h1>Screenshots</h1>
+    <h2>Screenshots</h2>
     <div style='position: relative;'>
     
       <a class="example-image-link" href="images/screens/portfolio.png" data-lightbox="example-set" data-title="Portfolio page"><img style='vertical-align: top;' class="example-image" src="images/screens/thumbs/portfolio.png" width='200' alt=""/></a>
