--- a/misc-docs-etc/Developing-maintaining/project-site/index.html
+++ b/misc-docs-etc/Developing-maintaining/project-site/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-	<title>DFD Cryptocoin Values - Open source / free private cryptocurrency portfolio tracker, with email / text / alexa alerts</title>
+	<title>DFD Cryptocoin Values - Open source / free private cryptocurrency investment portfolio tracker, with email / text / Alexa alerts, charts, mining calculators, and other crypto tools</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,7 +20,7 @@
 	<div align='center'>
 
 	<h2>DFD Cryptocoin Values</h2>
-	<h3>Private cryptocurrency portfolio tracker, with email / text / Alexa alerts, charts, mining calculators, and other crypto tools.</h3>
+	<h3>Open source / free private cryptocurrency investment portfolio tracker, with email / text / Alexa alerts, charts, mining calculators, and other crypto tools.</h3>
 	<h4>Privately track your investment in Bitcoin, Ethereum, Monero, Litecoin, Grin, Cosmos, and an unlimited number of other altcoins. Customize the coin list / alerts to your favorite assets / exchange pairings. No limits, add as many coins / markets as you want.</h4>
 
 	<p align='center' class='main_links'>
