Added charts in project descriptions
Added charts in project descriptions

--- a/misc-docs-etc/Developing-maintaining/project-site/index.html
+++ b/misc-docs-etc/Developing-maintaining/project-site/index.html
@@ -21,7 +21,7 @@
 
 	<h2>DFD Cryptocoin Values</h2>
 	<h3>Open source / free private cryptocurrency investment portfolio tracker, with email / text / Alexa alerts, charts, mining calculators, and other crypto tools.</h3>
-	<h4>Privately track your investment in Bitcoin, Ethereum, Monero, Litecoin, Grin, Cosmos, and an unlimited number of other altcoins / cryptocurrencies. Customize the coin list / alerts to your favorite assets / exchange pairings. No limits, add as many coins / markets as you want.</h4>
+	<h4>Privately track your investment in Bitcoin, Ethereum, Monero, Litecoin, Grin, Cosmos, and an unlimited number of other altcoins / cryptocurrencies. Customize the coin list / alerts / charts to your favorite assets / exchange pairings. No limits, add as many coins / markets as you want.</h4>
 
 	<p align='center' class='main_links'>
 	<a href='https://sourceforge.net/projects/dfd-cryptocoin-values/'>Visit Sourceforge Project Page</a>
