--- a/misc-docs-etc/Developing-maintaining/project-site/index.html
+++ b/misc-docs-etc/Developing-maintaining/project-site/index.html
@@ -53,7 +53,7 @@
     To install / upgrade everything automatically on a Raspberry Pi (an affordable low power single board computer), copy / paste / run the command below in a terminal program while logged in on the Raspberry Pi:
 		<br /><br />
 		
-		<pre>wget -O FOLIO-RASPI-INSTALL.bash https://git.io/JeWWk;chmod +x FOLIO-RASPI-INSTALL.bash;sudo ./FOLIO-RASPI-INSTALL.bash</pre>
+		<pre>wget -O FOLIO-INSTALL.bash https://git.io/JeWWE;chmod +x FOLIO-INSTALL.bash;sudo ./FOLIO-INSTALL.bash</pre>
 		
 		
 		
