Binance US / Bittrex Global, version bump
-Changed Bittrex Intl brand to Bittrex Global
-Added Binance US API support

--- a/misc-docs-etc/Developing-maintaining/project-site/index.html
+++ b/misc-docs-etc/Developing-maintaining/project-site/index.html
@@ -37,7 +37,7 @@
 	
 	<h4>Privately track your investment in Bitcoin, Ethereum, Monero, Litecoin, Grin, Cosmos, and an unlimited number of other altcoins / cryptocurrencies. Customize the coin list / alerts / charts to your favorite assets and exchange pairings. No limits, add as many coins / markets as you want.</h4>
 	
-	<h4>BTC / XMR / ETH / LTC / USDT (Tether) / TUSD (True USD) / USDC base pairing support. Supported exchanges (contact me to request more): coinbase / binance / bittrex and bittrex_intl / kraken / poloniex / bitstamp / bitfinex and ethfinex / cryptofresh / gemini / hitbtc / livecoin / upbit / kucoin / okex / gateio / graviex / idex / hotbit / tradeogre / bitforex / bigone / tradesatoshi.</h4>
+	<h4>BTC / XMR / ETH / LTC / USDT (Tether) / TUSD (True USD) / USDC base pairing support. Supported exchanges (contact me to request more): coinbase / binance / binance_us / bittrex & bittrex_global / kraken / poloniex / bitstamp / bitfinex and ethfinex / cryptofresh / gemini / hitbtc / livecoin / upbit / kucoin / okex / gateio / graviex / idex / hotbit / tradeogre / bitforex / bigone / tradesatoshi.</h4>
 	
     </div>
 
