--- a/misc-docs-etc/Developing-maintaining/project-site/index.html
+++ b/misc-docs-etc/Developing-maintaining/project-site/index.html
@@ -37,7 +37,9 @@
 	
 	<h4>Privately track your investment in Bitcoin, Ethereum, Monero, Litecoin, Grin, Cosmos, and an unlimited number of other altcoins / cryptocurrencies. Customize the coin list / alerts / charts to your favorite assets and exchange pairings. No limits, add as many coins / markets as you want.</h4>
 	
-	<h4>BTC / XMR / ETH / LTC / USDT (Tether) / TUSD (True USD) / USDC / USD / CAD / AUD / GBP / EUR base pairing support. Supported exchanges (contact me to request more): bigone / binance & binance_us / bitfinex & ethfinex / bitforex / bitstamp  / bittrex & bittrex_global / btcmarkets / coinbase / cryptofresh / gateio / gemini / graviex / hitbtc / hotbit / idex / kraken / kucoin / livecoin / okcoin / okex / poloniex / tradeogre / tradesatoshi / upbit.</h4>
+	<h4>Support for trading pairs (contact me to request more): USD / CAD / AUD / SGD / HKD / GBP / EUR / CHF / JPY / USDT (Tether) / TUSD (True USD) / USDC / BTC / XMR / ETH / LTC.</h4>
+
+	<h4>Support for exchanges (contact me to request more): bigone / binance & binance_us / bitfinex & ethfinex / bitforex / bitpanda / bitstamp  / bittrex & bittrex_global / btcmarkets / cex / coinbase / cryptofresh / gateio / gemini / graviex / hitbtc / hotbit / huobi / idex / kraken / kucoin / lakebtc / livecoin / okcoin / okex / poloniex / tidebit / tradeogre / tradesatoshi / upbit.</h4>
 	
     </div>
 
